--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,12 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+*storybook.log
+
+# Environment variables
+.env
+.env.example
+.env.local
+.env.development
+.env.production
